# pr-reviewer

./: .env.example  .gitignore  Dockerfile  README.md  install.sh  pr-reviewer  pyproject.toml  uninstall.sh
.github/workflows/: ai-review.yml  ci.yml
app/: __init__.py  cli.py  config.py  diff_index.py  github_client.py  main.py  orchestrator.py  paths.py  profiles.py  providers.py  reviewer.py  runner.py  security.py
docs/: ARCHITECTURE.md
examples/: UserProfileActivity.kt
profiles.d/: security.md
samples/: sample.diff
scripts/: demo_local.py  review_pr.py
tests/: test_cli.py  test_diff_index.py  test_orchestrator.py  test_paths.py  test_providers.py  test_reviewer.py  test_runner.py  test_security.py  test_webhook.py
